# MockShell

./: MockShell.cabal  README.md  example.json
src/: Main.hs
