name:                MockShell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/exallium/MockShell#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Hart
maintainer:          alex.hart658@gmail.com
copyright:           Copyright: (c) 2016 Alex Hart
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable MockShell
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative >= 0.13.2.0 && < 0.14
                     , process >= 1.4.3.0 && < 1.5
                     , aeson >= 1.1.2.0 && < 1.2
                     , bytestring
